# aco

./: .gitignore  Gemfile  README.md  _config.yml  index.md  lectures.md  materials.md  practice.md  project.md  schedule.md
.github/workflows/: jekyll.yml
CodingTutorial/: Array1D.c  Array3D.c  C.c  FunctionPointer.c  HelloWorld.c  IO.c  Makefile  OpenMP_nested_loop.c  ParallelRecursion1D.c  Pointer.c  README.md  Structure.c  StructureArray.c  StructurePointer.c  foverflow.c  galaxyGC.c  gravity1D-parallel.c  gravity1D.c  indexx.c  my.c  my.h  pi.c  qsort.c  read_mtree.c  stdint.c  utility.c  utility.h  valgrindtest.c
CodingTutorialC++/: CMakeLists.txt  IO.cpp  MainArgs.cpp  Makefile  README.md  Sort_index  Sort_index.cpp  advanced_functions.cpp  class.cpp  different_arrays.cpp  mpi_example.cpp  openmp-example.cpp  openmp-nested-for-loop.cpp  openmp-no-parallel.cpp  openmp-parallel-output.cpp  openmp-sections.cpp  overflow.cpp  pi.cpp  pointer-dam.cpp  pointer-dam3D.cpp  pointer-update-parameter.cpp  problemtic_program_for_gdb.cpp  segfault_examples.cpp  structure.cpp  vector.cpp
CodingTutorialC++/MPI/: main1-HelloWorld.cpp  main2-SendReceive.cpp  main3-Broadcast.cpp  main4-ScatterGather.cpp  main5-SumReduction.cpp  main6-SendReceive2.cpp
_announcements/: 01_sample_announcement.md
_data/: nav.yml  people.yml  previous_offering.yml
_events/: due-project-chosen.md  final_exam_due.md  practice_event.md  sample_exam_due.md
_includes/: header.html
_lectures/: 01_introduction.md
_site/: Gemfile  feed.xml  index.html
theory/: README.md
(+28 files in other folders)
